--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@
 
 DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5432/postgres"
 NEXTAUTH_SECRET="aniliscoding"
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
