--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5432/postgres"
-NEXTAUTH_SECRET="aniliscoding"
+DATABASE_URL=""
+NEXTAUTH_SECRET=""
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
