added google provider

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@
 
 DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5432/postgres"
 NEXTAUTH_SECRET="aniliscoding"
-GOOGLE_CLIENTT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENTT_ID="618906872213-vuk74eqd1kj1ndvc9t88brldobfcak7k.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
